{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerInGameButtons",
            "id": "961a2d73-e769-40a4-9d95-e39f299496d8",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "5cae10c0-7f17-4584-8e68-fe437833092a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "78d406f2-34ad-4369-944e-dec422a7721c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "f47b89c2-5977-466c-8794-7dda5509ba08",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AttackHold",
                    "type": "Button",
                    "id": "ab885bee-120f-4c55-aa1d-d16b69b961af",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ThrowCandy",
                    "type": "Button",
                    "id": "cb87c098-5d7f-4513-aba6-3d4bd9df4cf4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "bcb61685-98ad-4d44-8669-8f192e80d003",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "bd844b56-e1d7-48b5-9506-47d3d5173660",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "11bbaf1b-9594-45cd-9ee2-8481238d0b3c",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "34bb5422-b971-450b-8bba-b1f64c36f360",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6a435b43-70d1-4121-8625-486c54433a31",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d5d15ab2-79c8-45ce-ac55-fc98a67d1822",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "117a548b-bf09-4fb2-b6b2-d2b2cc9c83c1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "63cdb196-403e-451c-94e4-01625defacf9",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f8d5457e-2b25-47a5-b846-5d8626687d2b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3d62265-9161-4623-97cf-bf26997fd969",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrowCandy",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "New control scheme",
            "bindingGroup": "New control scheme",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}